--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
+    {{ badlogin }}
+    <br>
     Введи свое имя, незнакомец.
     <form action="" method="post" novalidate>
         {{ form.hidden_tag() }}
